@@ -1,3 +1,13 @@
+2011-02-10  Eric Blake  <eblake@redhat.com>
+
+	* errno.cc (__xpg_strerror_r): New function.
+	(strerror_r): Update to copy newlib's fixes.
+	(strerror): Set errno on failure.
+	(_sys_errlist): Cause EINVAL failure for reserved values.
+	* cygwin.din: Export new function.
+	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Combine
+	this into minor 236.
+
 2011-02-09  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* cygwin.din (pthread_yield): Export as alias to sched_yield.
